# doc/swagger.yaml
@@ -74,54 +74,6 @@ paths:
       responses:
         '302':
           description: redirect uri with result request.
-  '/oauth2/login':
-    get:
-      tags:
-        - OAuth2
-      description: |
-        Create configuration
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - in: query
-          name: response_type
-          required: true
-          type: string
-          enum:
-            - code
-            - token
-          description: |
-            The response type. Must be code or token. Indicates whether the client wants an authorization code (authorization code grant flow) for the end user or directly issues tokens for end user (implicit flow)
-        - in: query
-          name: client_id
-          required: true
-          type: string
-          description: |
-            The Client ID.
-        - in: query
-          name: redirect_uri
-          required: true
-          type: string
-          description: |
-            The URL to which the authentication server redirects the browser after authorization has been granted by the user.
-        - in: query
-          name: state
-          required: true
-          type: string
-          description: |
-            An opaque value the clients adds to the initial request. The authorization server includes this value when redirecting back to the client.
-        - in: query
-          name: scope
-          required: true
-          type: string
-          description: |
-            Can be a combination of any system-reserved scopes or custom scopes associated with a client. Scopes must be separated by spaces.
-            Example: customer:write customer:read customer:delete
-      responses:
-        '302':
-          description: redirect uri with result request.
   '/oauth2/token':
     post:
       tags:
